<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutDetailMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp">

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:text="@string/text_empty"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgLogoHome"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/ic_no_image"/>

                    <TextView
                        android:id="@+id/txtNameHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:text="@string/text_empty"/>

                    <TextView
                        android:id="@+id/txtHomeScorer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="@string/text_empty"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtScoreHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="@string/text_empty"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VS"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtScoreAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="@string/text_empty"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgLogoAway"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/ic_no_image"/>

                    <TextView
                        android:id="@+id/txtNameAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:text="@string/text_empty"/>

                    <TextView
                        android:id="@+id/txtAwayScorer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="@string/text_empty"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/text_lineups"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtGkHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/text_empty"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_goal_keeper"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtGkAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                tools:text="@string/text_empty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDefHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/text_empty"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_defense"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtDefAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                tools:text="@string/text_empty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtMidHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/text_empty"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_midfield"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtMidAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                tools:text="@string/text_empty"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForwardHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/text_empty"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_forward"
                android:textSize="12sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtForwardAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                tools:text="@string/text_empty"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/text_subtitutes"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSubtituteHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/text_empty"/>

            <TextView
                android:id="@+id/txtSubtituteAway"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                tools:text="@string/text_empty"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>